# ed

./: CMakeLists.txt  TODO
core/include/: Application.hh
core/include/public/: types.h
core/include/renderer/: GraphicalRenderer.hh  IRenderer.hh  TerminalRenderer.hh
core/include/renderer/text/: FontManager.hh  IPreRendererdFont.hh  TTFFont.hh
core/source/: Application.cc  CMakeLists.txt  main.cc
core/source/renderer/: GraphicalRenderer.cc  TerminalRenderer.cc
core/source/renderer/text/: FontManager.cc  TTFFont.cc
scripts/: _common.sh  build.sh
